--- a/index.html
+++ b/index.html
@@ -927,6 +927,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
         </ul>
       </div>
 
