--- a/checkout.html
+++ b/checkout.html
@@ -188,159 +188,167 @@
 
    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
-  // ---------- Load cart from localStorage ----------
-  let cart = JSON.parse(localStorage.getItem("cart") || "[]");
-  const itemsDiv = document.getElementById("itemsList");
-  const subtotalEl = document.getElementById("subtotalAmt");
-  const shippingEl = document.getElementById("shippingAmt");
-  const totalEl = document.getElementById("totalAmt");
-  const btnPay = document.getElementById("btnPay");
-  const pinInput = document.getElementById("pin");
-  const form = document.getElementById("checkoutForm");
+  // -------------------------------------------------------------------------------------
+  // 🛑 CRITICAL CHANGE: REPLACE THIS PLACEHOLDER WITH YOUR LIVE RAILWAY URL
+  // Example: https://sparkling-commitment-eqqga-asia-southeast1.railway.app
+  // -------------------------------------------------------------------------------------
+  const API_BASE_URL = "ermunai-user-project-production.up.railway.app";
 
-  function renderCart() {
-    itemsDiv.innerHTML = "";
-    let subtotal = 0;
-    cart.forEach(item => {
-      const itemDiv = document.createElement("div");
-      itemDiv.className = "cart-item";
-      const nameSpan = document.createElement("span");
-      nameSpan.textContent = item.name + " × " + item.qty;
-      const priceSpan = document.createElement("span");
-      priceSpan.textContent = "₹" + (item.price * item.qty).toFixed(2);
-      itemDiv.append(nameSpan, priceSpan);
-      itemsDiv.appendChild(itemDiv);
-      subtotal += item.price * item.qty;
-    });
-    subtotalEl.textContent = "₹" + subtotal.toFixed(2);
-    return subtotal;
-  }
+  // ---------- Load cart from localStorage ----------
+  let cart = JSON.parse(localStorage.getItem("cart") || "[]");
+  const itemsDiv = document.getElementById("itemsList");
+  const subtotalEl = document.getElementById("subtotalAmt");
+  const shippingEl = document.getElementById("shippingAmt");
+  const totalEl = document.getElementById("totalAmt");
+  const btnPay = document.getElementById("btnPay");
+  const pinInput = document.getElementById("pin");
+  const form = document.getElementById("checkoutForm");
 
-  function computeShipping(pin) {
-    if (!pin) return 0;
-    pin = pin.trim();
-    if (/^6/.test(pin)) return 50;
-    if (/^5/.test(pin)) return 70;
-    return 100;
-  }
+  function renderCart() {
+    itemsDiv.innerHTML = "";
+    let subtotal = 0;
+    cart.forEach(item => {
+      const itemDiv = document.createElement("div");
+      itemDiv.className = "cart-item";
+      const nameSpan = document.createElement("span");
+      nameSpan.textContent = item.name + " × " + item.qty;
+      const priceSpan = document.createElement("span");
+      priceSpan.textContent = "₹" + (item.price * item.qty).toFixed(2);
+      itemDiv.append(nameSpan, priceSpan);
+      itemsDiv.appendChild(itemDiv);
+      subtotal += item.price * item.qty;
+    });
+    subtotalEl.textContent = "₹" + subtotal.toFixed(2);
+    return subtotal;
+  }
 
-  function computeTotal(subtotal, shipping) {
-    return subtotal + shipping;
-  }
+  function computeShipping(pin) {
+    if (!pin) return 0;
+    pin = pin.trim();
+    if (/^6/.test(pin)) return 50;
+    if (/^5/.test(pin)) return 70;
+    return 100;
+  }
 
-  // ---------- Initialize ----------
-  let subtotal = renderCart();
-  let shipping = 0;
-  shippingEl.textContent = "₹" + shipping.toFixed(2);
-  totalEl.textContent = "₹" + computeTotal(subtotal, shipping).toFixed(2);
+  function computeTotal(subtotal, shipping) {
+    return subtotal + shipping;
+  }
 
-  pinInput.addEventListener("blur", () => {
-    const pin = pinInput.value;
-    shipping = computeShipping(pin);
-    shippingEl.textContent = "₹" + shipping.toFixed(2);
-    totalEl.textContent = "₹" + computeTotal(subtotal, shipping).toFixed(2);
-  });
+  // ---------- Initialize ----------
+  let subtotal = renderCart();
+  let shipping = 0;
+  shippingEl.textContent = "₹" + shipping.toFixed(2);
+  totalEl.textContent = "₹" + computeTotal(subtotal, shipping).toFixed(2);
 
-  // ---------- Pay Now Button ----------
-  btnPay.addEventListener("click", async (e) => {
-    e.preventDefault();
+  pinInput.addEventListener("blur", () => {
+    const pin = pinInput.value;
+    shipping = computeShipping(pin);
+    shippingEl.textContent = "₹" + shipping.toFixed(2);
+    totalEl.textContent = "₹" + computeTotal(subtotal, shipping).toFixed(2);
+  });
 
-    if (!form.checkValidity()) {
-      alert("Please fill all required details.");
-      return;
-    }
+  // ---------- Pay Now Button ----------
+  btnPay.addEventListener("click", async (e) => {
+    e.preventDefault();
 
-    const formData = {
-      name: form.name.value,
-      phone: form.phone.value,
-      address: form.address.value,
-      pin: form.pin.value,
-      city: form.city.value,
-      state: form.state.value
-    };
+    if (!form.checkValidity()) {
+      alert("Please fill all required details.");
+      return;
+    }
 
-    const order = {
-      items: cart,
-      subtotal: subtotal,
-      shipping: shipping,
-      total: computeTotal(subtotal, shipping),
-      customer: formData
-    };
+    const formData = {
+      name: form.name.value,
+      phone: form.phone.value,
+      address: form.address.value,
+      pin: form.pin.value,
+      city: form.city.value,
+      state: form.state.value
+    };
 
-    try {
-      // Step 1: Create Razorpay Order
-      const response = await fetch("http://localhost:5000/create-order", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ amount: order.total })
-      });
+    const order = {
+      items: cart,
+      subtotal: subtotal,
+      shipping: shipping,
+      total: computeTotal(subtotal, shipping),
+      customer: formData
+    };
 
-      if (!response.ok) {
-        const errorText = await response.text();
-        console.error("Server error:", errorText);
-        alert("Failed to create Razorpay order.");
-        return;
-      }
+    try {
+      // Step 1: Create Razorpay Order
+      // UPDATED: Using the API_BASE_URL variable
+      const response = await fetch(`${API_BASE_URL}/create-order`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ amount: order.total })
+      });
 
-      const data = await response.json();
-      console.log("Razorpay Order Created:", data);
+      if (!response.ok) {
+        const errorText = await response.text();
+        console.error("Server error:", errorText);
+        alert("Failed to create Razorpay order.");
+        return;
+      }
 
-      // Step 2: Open Razorpay payment popup
-      const options = {
-        key: "rzp_test_RWsNjENImz7rr4", // replace with your real key_id
-        amount: order.total * 100,
-        currency: "INR",
-        name: "Erumunai Organic Farm Foods",
-        description: "Order Payment",
-        order_id: data.id,
-        handler: async function (response) {
-          // Step 3: Save order to Firebase after payment success
-          const paymentData = {
-            ...order,
-            payment_id: response.razorpay_payment_id,
-            order_id: response.razorpay_order_id,
-            signature: response.razorpay_signature,
-            status: "Paid",
-            date: new Date().toISOString()
-          };
+      const data = await response.json();
+      console.log("Razorpay Order Created:", data);
 
-          try {
-            const saveResponse = await fetch("http://localhost:5000/save-order", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ orderData: paymentData })
-            });
+      // Step 2: Open Razorpay payment popup
+      const options = {
+        key: "rzp_test_RWsNjENImz7rr4", // replace with your real key_id
+        amount: order.total * 100,
+        currency: "INR",
+        name: "Erumunai Organic Farm Foods",
+        description: "Order Payment",
+        order_id: data.id,
+        handler: async function (response) {
+          // Step 3: Save order to Firebase after payment success
+          const paymentData = {
+            ...order,
+            payment_id: response.razorpay_payment_id,
+            order_id: response.razorpay_order_id,
+            signature: response.razorpay_signature,
+            status: "Paid",
+            date: new Date().toISOString()
+          };
 
-            if (!saveResponse.ok) {
-              const errorText = await saveResponse.text();
-              console.error("Save Order Error:", errorText);
-              alert("Payment succeeded but order not saved!");
-              return;
-            }
+          try {
+            // UPDATED: Using the API_BASE_URL variable
+            const saveResponse = await fetch(`${API_BASE_URL}/save-order`, {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ orderData: paymentData })
+            });
 
-            alert("Payment Successful! Your order has been placed.");
-            localStorage.removeItem("cart");
-            window.location.href = "thankyou.html";
-          } catch (saveErr) {
-            console.error("Error saving order:", saveErr);
-            alert("Error saving order details.");
-          }
-        },
-        prefill: {
-          name: formData.name,
-          contact: formData.phone
-        },
-        theme: { color: "#2f6f31" }
-      };
+            if (!saveResponse.ok) {
+              const errorText = await saveResponse.text();
+              console.error("Save Order Error:", errorText);
+              alert("Payment succeeded but order not saved!");
+              return;
+            }
 
-      const rzp = new Razorpay(options);
-      rzp.open();
+            alert("Payment Successful! Your order has been placed.");
+            localStorage.removeItem("cart");
+            window.location.href = "thankyou.html";
+          } catch (saveErr) {
+            console.error("Error saving order:", saveErr);
+            alert("Error saving order details.");
+          }
+        },
+        prefill: {
+          name: formData.name,
+          contact: formData.phone
+        },
+        theme: { color: "#2f6f31" }
+      };
 
-    } catch (err) {
-      console.error("Payment initiation error:", err);
-      alert("Something went wrong. Please try again.");
-    }
-  });
+      const rzp = new Razorpay(options);
+      rzp.open();
+
+    } catch (err) {
+      console.error("Payment initiation error:", err);
+      alert("Something went wrong. Please try again.");
+    }
+  });
 </script>
 
 </body>
