--- a/checkout.html
+++ b/checkout.html
@@ -192,7 +192,7 @@
   // 🛑 CRITICAL CHANGE: REPLACE THIS PLACEHOLDER WITH YOUR LIVE RAILWAY URL
   // Example: https://sparkling-commitment-eqqga-asia-southeast1.railway.app
   // -------------------------------------------------------------------------------------
-  const API_BASE_URL = "ermunai-user-project-production.up.railway.app";
+  const API_BASE_URL = "https://ermunai-user-project-production.up.railway.app";
 
   // ---------- Load cart from localStorage ----------
   let cart = JSON.parse(localStorage.getItem("cart") || "[]");
