--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Cart - Ermunai Organic</title>
+  <!-- Basic SEO Meta Tags -->
+  <title>My cart - Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products in India</title>
+  <meta name="description"
+    content="Buy 100% organic, natural, and chemical-free farm foods from Ermunai Organic Farm Foods. Explore our range of ready-to-cook and ready-to-eat organic products, delivered fresh across India.">
+  <meta name="keywords"
+    content="organic food India, Ermunai Organic, organic farm foods, ready to cook, organic groceries, natural farm produce">
+  <meta name="author" content="Ermunai Organic Farm Foods">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://ermunaiorganicfarmfoods.com/">
+  <meta property="og:title" content="Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products">
+  <meta property="og:description"
+    content="Ermunai Organic Farm Foods brings you healthy, natural, and organic products directly from farm to table.">
+  <meta property="og:url" content="https://ermunaiorganicfarmfoods.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * {
