--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
             align-items: center;
             min-height: 100vh;
         }
+
         .container {
             background-color: #fff;
             padding: 40px 60px;
@@ -26,20 +28,25 @@
             max-width: 600px;
             width: 90%;
         }
+
         h1 {
-            color: #38761d; /* Deep Green - Matching your brand color */
+            color: #38761d;
+            /* Deep Green - Matching your brand color */
             margin-bottom: 10px;
             font-size: 2.5em;
         }
+
         .icon {
             color: #38761d;
             font-size: 4em;
             margin-bottom: 20px;
         }
+
         p {
             margin-bottom: 20px;
             line-height: 1.6;
         }
+
         .contact-info {
             background-color: #e9f5e9;
             padding: 15px;
@@ -49,13 +56,17 @@
             text-align: left;
             border-left: 5px solid #38761d;
         }
+
         .contact-info p {
             margin: 5px 0;
         }
+
         .contact-info strong {
             display: inline-block;
-            width: 100px; /* Aligns the data nicely */
+            width: 100px;
+            /* Aligns the data nicely */
         }
+
         .btn-shop {
             background-color: #38761d;
             color: white;
@@ -66,11 +77,13 @@
             transition: background-color 0.3s;
             display: inline-block;
         }
+
         .btn-shop:hover {
             background-color: #2a5a15;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="icon">✅</div>
@@ -78,10 +91,11 @@
         <h1>Order Placed Successfully!</h1>
 
         <p>
-            Thank you for your order with **Ermunai Organic Farm Foods**! We have received your payment and your order is being processed. 
+            Thank you for your order with **Ermunai Organic Farm Foods**! We have received your payment and your order
+            is being processed.
             You will receive a confirmation email shortly.
         </p>
-        
+
         <p>
             We appreciate your business and hope you enjoy our organic products.
         </p>
@@ -101,4 +115,5 @@
         </div>
     </div>
 </body>
+
 </html>
