--- a/about.html
+++ b/about.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Ermunai Organic Farm Foods</title>
+  <!-- Basic SEO Meta Tags -->
+  <title>About us - Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products in India</title>
+  <meta name="description"
+    content="Buy 100% organic, natural, and chemical-free farm foods from Ermunai Organic Farm Foods. Explore our range of ready-to-cook and ready-to-eat organic products, delivered fresh across India.">
+  <meta name="keywords"
+    content="organic food India, Ermunai Organic, organic farm foods, ready to cook, organic groceries, natural farm produce">
+  <meta name="author" content="Ermunai Organic Farm Foods">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://ermunaiorganicfarmfoods.com/">
+  <meta property="og:title" content="Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products">
+  <meta property="og:description"
+    content="Ermunai Organic Farm Foods brings you healthy, natural, and organic products directly from farm to table.">
+  <meta property="og:url" content="https://ermunaiorganicfarmfoods.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -455,13 +472,14 @@
 
     /* ✅ Footer */
     footer {
-      background: green;
-      color: white;
-      padding: 30px 20px;
+      background: linear-gradient(145deg, #056608, #0b8a0d);
+      color: #fff;
+      padding: 40px 20px;
+      font-family: "Poppins", sans-serif;
     }
 
     .footer-container {
-      max-width: 1400px;
+      max-width: 1300px;
       margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -470,50 +488,94 @@
 
     .footer-section h3,
     .footer-section h4 {
-      margin-bottom: 10px;
-      font-weight: 800;
+      color: #fff;
+      margin-bottom: 15px;
+      font-weight: 700;
+      font-size: 1.2rem;
+      border-bottom: 2px solid #ffd700;
+      display: inline-block;
+      padding-bottom: 5px;
+    }
+
+    .footer-section p {
+      font-size: 14px;
+      line-height: 1.6;
     }
 
     .footer-section ul {
       list-style: none;
+      padding: 0;
     }
 
     .footer-section ul li {
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     .footer-section ul li a {
-      color: white;
+      color: #fff;
       text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease, text-decoration 0.3s ease;
+      font-weight: 500;
+      transition: color 0.3s ease;
     }
 
     .footer-section ul li a:hover {
       color: #ffd700;
-      text-decoration: underline;
     }
 
+    /* WhatsApp Order Button */
     .whatsapp {
-      margin: 15px 0;
+      margin: 25px 0;
       text-align: center;
     }
 
     .whatsapp a {
       background: #25D366;
       color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
+      padding: 12px 25px;
+      border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
+      transition: background 0.3s ease;
     }
 
+    .whatsapp a:hover {
+      background: #1eb85b;
+    }
+
+    /* Footer Bottom */
     .footer-bottom {
       text-align: center;
-      margin-top: 20px;
-      border-top: 1px solid white;
-      padding-top: 10px;
+      border-top: 1px solid rgba(255, 255, 255, 0.3);
+      padding-top: 15px;
+      font-size: 14px;
     }
+
+    .footer-bottom p {
+      margin: 5px 0;
+    }
+
+    .footer-links a {
+      color: #ffd700;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .footer-links a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .footer-container {
+        text-align: center;
+      }
+
+      .footer-section h3,
+      .footer-section h4 {
+        border: none;
+      }
+    }
+
 
     /* ================= Mobile Responsive Design ================= */
     @media(max-width: 768px) {
@@ -713,15 +775,19 @@
   <!-- ✅ Footer -->
   <footer>
     <div class="footer-container">
+      <!-- About Section -->
       <div class="footer-section about">
         <h3>Ermunai Organic Farm Foods</h3>
-        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam
-          St.,BFI,<br>Muraliram Srinivas Flats,<br>Ullagaram,<br>Chennai - 600 091.</p>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>
+          Plot No. 8, Ramalingam St., BFI,<br>
+          Muraliram Srinivas Flats,<br>
+          Ullagaram, Chennai - 600 091.</p>
         <p><i class="fa fa-phone"></i> +91 9841231996</p>
         <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
         <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
       </div>
 
+      <!-- Company Links -->
       <div class="footer-section company">
         <h4>Company</h4>
         <ul>
@@ -731,9 +797,12 @@
           <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms & Conditions</a></li>
+          <li><a href="shipping.html">Shipping Policy</a></li>
         </ul>
       </div>
 
+      <!-- Product Categories -->
       <div class="footer-section products">
         <h4>Products</h4>
         <ul>
@@ -745,6 +814,7 @@
         </ul>
       </div>
 
+      <!-- Social Links -->
       <div class="footer-section follow-us">
         <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
         <ul>
@@ -760,16 +830,24 @@
       </div>
     </div>
 
+    <!-- WhatsApp Order Button -->
     <div class="whatsapp">
       <a href="https://wa.me/919841231996" target="_blank">
         <i class="fab fa-whatsapp"></i> Order on WhatsApp
       </a>
     </div>
 
+    <!-- Footer Bottom -->
     <div class="footer-bottom">
-      <p>© 2024 Ermunai Organic Farm Foods. All rights reserved.</p>
+      <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
+      <p class="footer-links">
+        <a href="privacy.html">Privacy Policy</a> |
+        <a href="terms.html">Terms & Conditions</a> |
+        <a href="shipping.html">Shipping Policy</a>
+      </p>
     </div>
   </footer>
+
   <script>
     //header
     const hamburger = document.querySelector(".hamburger");
