--- a/privacy.html
+++ b/privacy.html
@@ -435,7 +435,9 @@
         <h1>Privacy Policy</h1>
         <p class="effective-date">Effective Date: 23 October 2025</p>
 
-        <p>This Privacy Policy describes how **M/s. Ermunai Organic Farm Foods** (referred to as "we," "us," or "our") collects, uses, and protects your personal information when you visit, use, or make a purchase from our website (the "Site" or "Service").</p>
+        <p>This Privacy Policy describes how **M/s. Ermunai Organic Farm Foods** (referred to as "we," "us," or "our")
+            collects, uses, and protects your personal information when you visit, use, or make a purchase from our
+            website (the "Site" or "Service").</p>
         <p>By using our Service, you agree to the collection and use of information in accordance with this policy.</p>
 
         <h2>1. Information We Collect</h2>
@@ -452,15 +454,21 @@
         <h3>B. Financial Information (Collected by Payment Gateway)</h3>
         <ul>
             <li>We use third-party payment gateways (like Razorpay) to process all payments.</li>
-            <li>We **DO NOT** store your credit card, debit card, or net banking details on our servers. This sensitive financial data is collected, processed, and stored securely by our payment gateway partners, and they are responsible for its security.</li>
+            <li>We **DO NOT** store your credit card, debit card, or net banking details on our servers. This sensitive
+                financial data is collected, processed, and stored securely by our payment gateway partners, and they
+                are responsible for its security.</li>
             <li>We only receive payment confirmation, amount, and limited transaction details (like the Order ID).</li>
         </ul>
 
         <h3>C. Usage Data and Cookies</h3>
         <p>We automatically collect information when you access the Service ("Usage Data").</p>
         <ul>
-            <li><strong>Log Data:</strong> Internet Protocol (IP) address, browser type, operating system, pages of our Service that you visit, time and date of your visit.</li>
-            <li><strong>Tracking Data (Cookies):</strong> We use cookies and similar tracking technologies to track activity on our Service (e.g., maintaining items in your shopping cart) and enhance your user experience. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent.</li>
+            <li><strong>Log Data:</strong> Internet Protocol (IP) address, browser type, operating system, pages of our
+                Service that you visit, time and date of your visit.</li>
+            <li><strong>Tracking Data (Cookies):</strong> We use cookies and similar tracking technologies to track
+                activity on our Service (e.g., maintaining items in your shopping cart) and enhance your user
+                experience. You can instruct your browser to refuse all cookies or to indicate when a cookie is being
+                sent.</li>
         </ul>
 
         <h2>2. How We Use Your Information</h2>
@@ -478,33 +486,45 @@
         <h2>3. Sharing and Disclosure of Your Information</h2>
         <p>We do not sell your Personal Information. We may share your information only in the following situations:</p>
         <ul>
-            <li><strong>With Service Providers:</strong> We share necessary data with third-party service providers who assist us in operating our business:
+            <li><strong>With Service Providers:</strong> We share necessary data with third-party service providers who
+                assist us in operating our business:
                 <ul>
                     <li>Payment Processors (for secure financial transactions).</li>
                     <li>Delivery/Logistics Partners (Name, address, and phone number for order delivery).</li>
                     <li>Website Hosting and Analytics Providers (Usage Data for performance analysis).</li>
                 </ul>
             </li>
-            <li><strong>For Legal Compliance:</strong> We may disclose your Personal Information if required to do so by Indian law, in response to a court order, or to protect the rights, property, or safety of **Ermunai Organic Farm Foods** or others.</li>
+            <li><strong>For Legal Compliance:</strong> We may disclose your Personal Information if required to do so by
+                Indian law, in response to a court order, or to protect the rights, property, or safety of **Ermunai
+                Organic Farm Foods** or others.</li>
         </ul>
 
         <h2>4. Data Security</h2>
-        <p>The security of your data is paramount. We implement reasonable security practices and procedures, including electronic and physical safeguards, to protect your Personal Information from unauthorized access, use, or disclosure. However, no method of transmission over the Internet or method of electronic storage is 100% secure.</p>
-        <p>By using our Service, you acknowledge that you are responsible for keeping your account password confidential.</p>
+        <p>The security of your data is paramount. We implement reasonable security practices and procedures, including
+            electronic and physical safeguards, to protect your Personal Information from unauthorized access, use, or
+            disclosure. However, no method of transmission over the Internet or method of electronic storage is 100%
+            secure.</p>
+        <p>By using our Service, you acknowledge that you are responsible for keeping your account password
+            confidential.</p>
 
         <h2>5. Your Rights and Grievances</h2>
         <ul>
-            <li><strong>Opt-Out:</strong> You can unsubscribe from our marketing communications at any time by clicking the "unsubscribe" link in the emails or by contacting us.</li>
-            <li><strong>Withdrawal of Consent:</strong> You have the right to withdraw your consent to the collection and processing of your sensitive personal data at any time by contacting us in writing.</li>
-            <li><strong>Grievance Officer:</strong> If you have any questions or grievances regarding this policy or the use of your Personal Information, please contact our Grievance Officer:</li>
+            <li><strong>Opt-Out:</strong> You can unsubscribe from our marketing communications at any time by clicking
+                the "unsubscribe" link in the emails or by contacting us.</li>
+            <li><strong>Withdrawal of Consent:</strong> You have the right to withdraw your consent to the collection
+                and processing of your sensitive personal data at any time by contacting us in writing.</li>
+            <li><strong>Grievance Officer:</strong> If you have any questions or grievances regarding this policy or the
+                use of your Personal Information, please contact our Grievance Officer:</li>
         </ul>
 
         <h2>6. Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, please contact us:</p>
         <p><strong>M/s. Ermunai Organic Farm Foods</strong></p>
         <ul>
-            <li><strong>Grievance Email:</strong> <a href="mailto:ermunaiorganicfarm@gmail.com">ermunaiorganicfarm@gmail.com</a></li>
-            <li><strong>Address:</strong> Plot No. 8, Ramalingam St., BFI, Muraliram Srinivas Flats, Ullagaram, Chennai - 600 091.</li>
+            <li><strong>Grievance Email:</strong> <a
+                    href="mailto:ermunaiorganicfarm@gmail.com">ermunaiorganicfarm@gmail.com</a></li>
+            <li><strong>Address:</strong> Plot No. 8, Ramalingam St., BFI, Muraliram Srinivas Flats, Ullagaram, Chennai
+                - 600 091.</li>
             <li><strong>Phone:</strong> +91 9841231996</li>
         </ul>
 
@@ -552,7 +572,8 @@
                             target="_blank">Facebook</a></li>
                     <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/ermunaiorganic"
                             target="_blank">Instagram</a></li>
-                    <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ermunai-organic-farm-217035363"
+                    <li><i class="fab fa-linkedin"></i> <a
+                            href="https://www.linkedin.com/in/ermunai-organic-farm-217035363"
                             target="_blank">LinkedIn</a></li>
                     <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/@ermunaiorganicfarm"
                             target="_blank">YouTube</a></li>
