--- a/purchase.html
+++ b/purchase.html
@@ -4,7 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Purchases</title>
+  <title>Purchases - Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products in India</title>
+<meta name="description" content="Buy 100% organic, natural, and chemical-free farm foods from Ermunai Organic Farm Foods. Explore our range of ready-to-cook and ready-to-eat organic products, delivered fresh across India.">
+<meta name="keywords" content="organic food India, Ermunai Organic, organic farm foods, ready to cook, organic groceries, natural farm produce">
+<meta name="author" content="Ermunai Organic Farm Foods">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="canonical" href="https://ermunaiorganicfarmfoods.com/">
+<meta property="og:title" content="Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products">
+<meta property="og:description" content="Ermunai Organic Farm Foods brings you healthy, natural, and organic products directly from farm to table.">
+<meta property="og:url" content="https://ermunaiorganicfarmfoods.com/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
+<meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
@@ -355,66 +367,111 @@
     }
 
     /* ✅ Footer */
-    footer {
-      background: green;
-      color: white;
-      padding: 30px 20px;
-    }
+footer {
+  background: linear-gradient(145deg, #056608, #0b8a0d);
+  color: #fff;
+  padding: 40px 20px;
+  font-family: "Poppins", sans-serif;
+}
 
-    .footer-container {
-      max-width: 1400px;
-      margin: 0 auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-    }
+.footer-container {
+  max-width: 1300px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+}
 
-    .footer-section h3,
-    .footer-section h4 {
-      margin-bottom: 10px;
-      font-weight: 800;
-    }
+.footer-section h3,
+.footer-section h4 {
+  color: #fff;
+  margin-bottom: 15px;
+  font-weight: 700;
+  font-size: 1.2rem;
+  border-bottom: 2px solid #ffd700;
+  display: inline-block;
+  padding-bottom: 5px;
+}
 
-    .footer-section ul {
-      list-style: none;
-    }
+.footer-section p {
+  font-size: 14px;
+  line-height: 1.6;
+}
 
-    .footer-section ul li {
-      margin-bottom: 8px;
-    }
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
 
-    .footer-section ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease, text-decoration 0.3s ease;
-    }
+.footer-section ul li {
+  margin-bottom: 10px;
+}
 
-    .footer-section ul li a:hover {
-      color: #ffd700;
-      text-decoration: underline;
-    }
+.footer-section ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
 
-    .whatsapp {
-      margin: 15px 0;
-      text-align: center;
-    }
+.footer-section ul li a:hover {
+  color: #ffd700;
+}
 
-    .whatsapp a {
-      background: #25D366;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-      font-weight: bold;
-      text-decoration: none;
-    }
+/* WhatsApp Order Button */
+.whatsapp {
+  margin: 25px 0;
+  text-align: center;
+}
 
-    .footer-bottom {
-      text-align: center;
-      margin-top: 20px;
-      border-top: 1px solid white;
-      padding-top: 10px;
-    }
+.whatsapp a {
+  background: #25D366;
+  color: white;
+  padding: 12px 25px;
+  border-radius: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background 0.3s ease;
+}
+
+.whatsapp a:hover {
+  background: #1eb85b;
+}
+
+/* Footer Bottom */
+.footer-bottom {
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  padding-top: 15px;
+  font-size: 14px;
+}
+
+.footer-bottom p {
+  margin: 5px 0;
+}
+
+.footer-links a {
+  color: #ffd700;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .footer-container {
+    text-align: center;
+  }
+
+  .footer-section h3,
+  .footer-section h4 {
+    border: none;
+  }
+}
+
 
 
     /* Responsive */
@@ -493,65 +550,77 @@
   </div>
 
   <!-- ✅ Footer -->
-  <footer>
-    <div class="footer-container">
-      <div class="footer-section about">
-        <h3>Ermunai Organic Farm Foods</h3>
-        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam
-          St.,BFI,<br>Muraliram Srinivas Flats,<br>Ullagaram,<br>Chennai - 600 091.</p>
-        <p><i class="fa fa-phone"></i> +91 9841231996</p>
-        <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
-        <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
-      </div>
-
-      <div class="footer-section company">
-        <h4>Company</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="feedback.html">Certification & Feedback</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section products">
-        <h4>Products</h4>
-        <ul>
-          <li><a href="shop.html?category=readyToCookMixes">Ready-to-cook Instant Mixes</a></li>
-          <li><a href="shop.html?category=instantSoup">Instant Soup Mix</a></li>
-          <li><a href="shop.html?category=idliPodi">Idli Podi's</a></li>
-          <li><a href="shop.html?category=instant">Instant Products</a></li>
-          <li><a href="shop.html?category=herbal">Herbal Products</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section follow-us">
-        <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
-        <ul>
-          <li><i class="fab fa-facebook-f"></i> <a href="https://www.facebook.com/ermunaiorganicfoods"
-              target="_blank">Facebook</a></li>
-          <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/ermunaiorganic"
-              target="_blank">Instagram</a></li>
-          <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ermunai-organic-farm-217035363"
-              target="_blank">LinkedIn</a></li>
-          <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/@ermunaiorganicfarm"
-              target="_blank">YouTube</a></li>
-        </ul>
-      </div>
+ <footer>
+  <div class="footer-container">
+    <!-- About Section -->
+    <div class="footer-section about">
+      <h3>Ermunai Organic Farm Foods</h3>
+      <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>
+        Plot No. 8, Ramalingam St., BFI,<br>
+        Muraliram Srinivas Flats,<br>
+        Ullagaram, Chennai - 600 091.</p>
+      <p><i class="fa fa-phone"></i> +91 9841231996</p>
+      <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
+      <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
     </div>
 
-    <div class="whatsapp">
-      <a href="https://wa.me/919841231996" target="_blank">
-        <i class="fab fa-whatsapp"></i> Order on WhatsApp
-      </a>
+    <!-- Company Links -->
+    <div class="footer-section company">
+      <h4>Company</h4>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="feedback.html">Certification & Feedback</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="terms.html">Terms & Conditions</a></li>
+        <li><a href="shipping.html">Shipping Policy</a></li>
+      </ul>
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2024 Ermunai Organic Farm Foods. All rights reserved.</p>
+    <!-- Product Categories -->
+    <div class="footer-section products">
+      <h4>Products</h4>
+      <ul>
+        <li><a href="shop.html?category=readyToCookMixes">Ready-to-cook Instant Mixes</a></li>
+        <li><a href="shop.html?category=instantSoup">Instant Soup Mix</a></li>
+        <li><a href="shop.html?category=idliPodi">Idli Podi's</a></li>
+        <li><a href="shop.html?category=instant">Instant Products</a></li>
+        <li><a href="shop.html?category=herbal">Herbal Products</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <!-- Social Links -->
+    <div class="footer-section follow-us">
+      <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
+      <ul>
+        <li><i class="fab fa-facebook-f"></i> <a href="https://www.facebook.com/ermunaiorganicfoods" target="_blank">Facebook</a></li>
+        <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/ermunaiorganic" target="_blank">Instagram</a></li>
+        <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ermunai-organic-farm-217035363" target="_blank">LinkedIn</a></li>
+        <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/@ermunaiorganicfarm" target="_blank">YouTube</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- WhatsApp Order Button -->
+  <div class="whatsapp">
+    <a href="https://wa.me/919841231996" target="_blank">
+      <i class="fab fa-whatsapp"></i> Order on WhatsApp
+    </a>
+  </div>
+
+  <!-- Footer Bottom -->
+  <div class="footer-bottom">
+    <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
+    <p class="footer-links">
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="terms.html">Terms & Conditions</a> |
+      <a href="shipping.html">Shipping Policy</a>
+    </p>
+  </div>
+</footer>
+
 
   <script type="module">
     //header
